<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group"
    tools:context=".Setting">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearallpurchase"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn2"
        android:text="@string/clear_all_purchase"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:fontFamily="@font/cheerfulyellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changepassword"
        tools:ignore="MissingClass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showallpurchase"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_125sdp"
        android:background="@drawable/btn2"
        android:text="@string/show_all_purchase"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:fontFamily="@font/cheerfulyellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showlastpurchase"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn2"
        android:text="@string/show_last_purchase"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:fontFamily="@font/cheerfulyellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showallpurchase"
        tools:ignore="MissingClass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changepassword"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn2"
        android:text="@string/change_password"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:fontFamily="@font/cheerfulyellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showlastpurchase"
        tools:ignore="MissingClass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addnewItem"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn2"
        android:text="@string/add_new_item"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/cheerfulyellow"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearallpurchase"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="MissingClass" />

</androidx.constraintlayout.widget.ConstraintLayout>