<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".SignUp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/SiginUp_ImageView"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SiginUp_btnSaveImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:fontFamily="@font/cheerfulyellow"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/add_image" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/fullname"
            app:boxBackgroundColor="@color/Orange"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/Orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_Fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/material"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/username"
            app:boxBackgroundColor="@color/Orange"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/Orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_Username"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:background="@drawable/material"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/Orange"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/Orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_Email"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:background="@drawable/material"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/Orange"
            android:textColorHint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/Orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/white"
                android:background="@drawable/material"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/re_password"
            app:boxBackgroundColor="@color/Orange"
            android:textColorHint="@color/black"
            app:endIconTint="@color/Orange"
        app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_RePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/white"
                android:background="@drawable/material"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/SiginUp_et_Spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/material"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/country"
            app:hintTextColor="@color/Orange"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sdp"
            android:entries="@array/counters"
            android:textStyle="bold"
            tools:ignore="MissingClass" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/Orange"
            android:hint="@string/birthdate"  >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_BirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:background="@drawable/material"
                android:textColor="@color/white"
                app:hintTextColor="@color/Orange"
                app:boxBackgroundColor="@color/Orange"
                android:textColorHint="@color/black"
                android:textStyle="bold"  />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/phone"
            app:boxBackgroundColor="@color/Orange"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/Orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:background="@drawable/material"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:hint="@string/adresss"
            app:boxBackgroundColor="@color/Orange"
            android:textColorHint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/Orange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SiginUp_et_Adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:background="@drawable/material"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/SiginUp_CbAdminstrator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/material"
            android:checked="false"
            android:text="@string/is_administrator"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/SiginUp_et_Phone" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/white"
            android:background="@drawable/material"
            app:layout_constraintTop_toBottomOf="@+id/SiginUp_CbAdminstrator">

            <RadioGroup
                android:id="@+id/SiginUp_RDGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/SiginUp_Rfemale"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:width="@dimen/_1sdp"
                    android:shadowColor="#2E2E32"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/female"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textStyle="normal"

                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/SiginUp_Rmale"
                    android:layout_width="191dp"
                    android:layout_height="wrap_content"
                    android:width="@dimen/_1sdp"
                    android:shadowColor="#2E2E32"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="normal"
                  />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SiginUp_btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:fontFamily="@font/cheerfulyellow"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btnsignin"
         />

    </LinearLayout>
</ScrollView>